--- a/Compare/packages.config
+++ b/Compare/packages.config
@@ -4,5 +4,9 @@
   <package id="jQuery.UI.Combined" version="1.10.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.0" targetFramework="net40" />
   <package id="jQuery.vsdoc" version="1.6" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
 </packages>
