--- a/Test/app.config
+++ b/Test/app.config
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="Caching" type="Ngauge.Caching.Configuration.CachingSection, Ngauge.Caching" />
+    <section name="Caching" type="Ngauge.Caching.Configuration.CachingSection, Ngauge.Caching"/>
   </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.480" newVersion="2.0.0.480" />
+        <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.480" newVersion="2.0.0.480"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.4.0" newVersion="4.0.4.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.0" newVersion="4.0.4.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <Caching path="C:\temp\CachingTest" isPathVirtual="false" cacheLife="60" useCache="true"></Caching>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
