--- a/Compare/Web.config
+++ b/Compare/Web.config
@@ -48,7 +48,7 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
-    <urlCompression doStaticCompression="true" doDynamicCompression="false" />
+    <urlCompression doStaticCompression="true" doDynamicCompression="true" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
