--- a/Compare/packages.config
+++ b/Compare/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CodeContracts.Unofficial" version="1.0.0.2" targetFramework="net45" />
+  <package id="DotNetOpenAuth.AspNet" version="4.0.4.12182" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core" version="4.0.4.12182" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.0.4.12182" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.0.4.12182" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.0.4.12182" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.4.12182" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.10.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.0" targetFramework="net40" />
@@ -8,6 +15,9 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
