--- a/Compare/packages.config
+++ b/Compare/packages.config
@@ -11,14 +11,17 @@
   <package id="jQuery.UI.Combined" version="1.10.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.0" targetFramework="net40" />
   <package id="jQuery.vsdoc" version="1.6" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.MVC" version="2.0.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
